# mat-fst

./: .gitignore  Cargo.toml  makefile  notes.md  readme.md
benches/: benchmarks.rs  comparison.rs  par_benchmarks.rs
papers/: final_report.bib  final_report.tex  makefile  progress_report.tex
reports/par vecmul high nnz/base/: benchmark.json
reports/par vecmul high nnz/change/: estimates.json
reports/par vecmul high nnz/new/: estimates.json  raw.csv  sample.json  tukey.json
reports/par vecmul high nnz/report/: index.html
reports/par vecmul low nnz/base/: sample.json
reports/par vecmul low nnz/change/: estimates.json
reports/par vecmul low nnz/new/: benchmark.json  estimates.json  raw.csv  tukey.json
reports/par vecmul low nnz/report/: index.html
reports/report/: index.html
reports/vecmul/0.001/report/: index.html
reports/vecmul/0.005/report/: index.html
reports/vecmul/0.01/report/: index.html
reports/vecmul/0.015/report/: index.html
reports/vecmul/0.02/report/: index.html
reports/vecmul/0.03/report/: index.html
reports/vecmul/0.04/report/: index.html
reports/vecmul/0.05/report/: index.html
reports/vecmul/0.06/report/: index.html
reports/vecmul/0.07/report/: index.html
reports/vecmul/0.08/report/: index.html
reports/vecmul/0.09/report/: index.html
reports/vecmul/report/: index.html
src/: build.rs  bytes.rs  circ_buf.rs  coo.rs  counting_writer.rs  csr.rs  dense.rs  error.rs  fst.rs  input.rs  iter.rs  lib.rs  matrix.rs  node.rs  output.rs  par_iter.rs  unit_tests.rs  util.rs
src/tests/: fst.rs  iter.rs  mod.rs  unit_tests.rs
(+367 files in other folders)
