[package]
name = "sparse_mat"
version = "0.1.0"
authors = ["julianknodt <julianknodt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
rayon = { version = "1.3.0", optional = true }

[features]
parallel = ["rayon"]

[dev-dependencies]
quickcheck = "0.9.2"
criterion = "0.3.1"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "par_benchmarks"
harness = false
required-features = ["parallel"]
